gitops-apps/technitium/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technitium-ui
  namespace: dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - dns.zmartin.me
      secretName: wildcard-zmartin-me-tls
  rules:
    - host: dns.zmartin.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: technitium-dns
                port:
                  number: 5380
